sys/prebuilt-bindings/geos_3.13.rs

extern "C" {
    pub fn GEOSWKTWriter_getOutputDimension_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKTWriter,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSWKTWriter_setOld3D_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKTWriter,
        useOld3D: libc::c_int,
    );
}
extern "C" {
    pub fn GEOS_printDouble(
        d: libc::c_double,
        precision: libc::c_uint,
        result: *mut libc::c_char,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSWKBReader_create_r(handle: GEOSContextHandle_t) -> *mut GEOSWKBReader;
}
extern "C" {
    pub fn GEOSWKBReader_destroy_r(handle: GEOSContextHandle_t, reader: *mut GEOSWKBReader);
}
extern "C" {
    pub fn GEOSWKBReader_setFixStructure_r(
        handle: GEOSContextHandle_t,
        reader: *mut GEOSWKBReader,
        doFix: libc::c_char,
    );
}
extern "C" {
    pub fn GEOSWKBReader_read_r(
        handle: GEOSContextHandle_t,
        reader: *mut GEOSWKBReader,
        wkb: *const libc::c_uchar,
        size: usize,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSWKBReader_readHEX_r(
        handle: GEOSContextHandle_t,
        reader: *mut GEOSWKBReader,
        hex: *const libc::c_uchar,
        size: usize,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSWKBWriter_create_r(handle: GEOSContextHandle_t) -> *mut GEOSWKBWriter;
}
extern "C" {
    pub fn GEOSWKBWriter_destroy_r(handle: GEOSContextHandle_t, writer: *mut GEOSWKBWriter);
}
extern "C" {
    pub fn GEOSWKBWriter_write_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKBWriter,
        g: *const GEOSGeometry,
        size: *mut usize,
    ) -> *mut libc::c_uchar;
}
extern "C" {
    pub fn GEOSWKBWriter_writeHEX_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKBWriter,
        g: *const GEOSGeometry,
        size: *mut usize,
    ) -> *mut libc::c_uchar;
}
extern "C" {
    pub fn GEOSWKBWriter_getOutputDimension_r(
        handle: GEOSContextHandle_t,
        writer: *const GEOSWKBWriter,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSWKBWriter_setOutputDimension_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKBWriter,
        newDimension: libc::c_int,
    );
}
extern "C" {
    pub fn GEOSWKBWriter_getByteOrder_r(
        handle: GEOSContextHandle_t,
        writer: *const GEOSWKBWriter,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSWKBWriter_setByteOrder_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKBWriter,
        byteOrder: libc::c_int,
    );
}
extern "C" {
    pub fn GEOSWKBWriter_getFlavor_r(
        handle: GEOSContextHandle_t,
        writer: *const GEOSWKBWriter,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSWKBWriter_setFlavor_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKBWriter,
        flavor: libc::c_int,
    );
}
extern "C" {
    pub fn GEOSWKBWriter_getIncludeSRID_r(
        handle: GEOSContextHandle_t,
        writer: *const GEOSWKBWriter,
    ) -> libc::c_char;
}
extern "C" {
    pub fn GEOSWKBWriter_setIncludeSRID_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSWKBWriter,
        writeSRID: libc::c_char,
    );
}
extern "C" {
    pub fn GEOSGeoJSONReader_create_r(handle: GEOSContextHandle_t) -> *mut GEOSGeoJSONReader;
}
extern "C" {
    pub fn GEOSGeoJSONReader_destroy_r(handle: GEOSContextHandle_t, reader: *mut GEOSGeoJSONReader);
}
extern "C" {
    pub fn GEOSGeoJSONReader_readGeometry_r(
        handle: GEOSContextHandle_t,
        reader: *mut GEOSGeoJSONReader,
        geojson: *const libc::c_char,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeoJSONWriter_create_r(handle: GEOSContextHandle_t) -> *mut GEOSGeoJSONWriter;
}
extern "C" {
    pub fn GEOSGeoJSONWriter_destroy_r(handle: GEOSContextHandle_t, writer: *mut GEOSGeoJSONWriter);
}
extern "C" {
    pub fn GEOSGeoJSONWriter_writeGeometry_r(
        handle: GEOSContextHandle_t,
        writer: *mut GEOSGeoJSONWriter,
        g: *const GEOSGeometry,
        indent: libc::c_int,
    ) -> *mut libc::c_char;
}
extern "C" {
    pub fn GEOSFree_r(handle: GEOSContextHandle_t, buffer: *mut libc::c_void);
}
extern "C" {
    pub fn GEOSversion() -> *const libc::c_char;
}
extern "C" {
    pub fn GEOSFree(buffer: *mut libc::c_void);
}
extern "C" {
    pub fn GEOSCoordSeq_create(size: libc::c_uint, dims: libc::c_uint) -> *mut GEOSCoordSequence;
}
extern "C" {
    pub fn GEOSCoordSeq_copyFromBuffer(
        buf: *const libc::c_double,
        size: libc::c_uint,
        hasZ: libc::c_int,
        hasM: libc::c_int,
    ) -> *mut GEOSCoordSequence;
}
extern "C" {
    pub fn GEOSCoordSeq_copyFromArrays(
        x: *const libc::c_double,
        y: *const libc::c_double,
        z: *const libc::c_double,
        m: *const libc::c_double,
        size: libc::c_uint,
    ) -> *mut GEOSCoordSequence;
}
extern "C" {
    pub fn GEOSCoordSeq_copyToBuffer(
        s: *const GEOSCoordSequence,
        buf: *mut libc::c_double,
        hasZ: libc::c_int,
        hasM: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_copyToArrays(
        s: *const GEOSCoordSequence,
        x: *mut libc::c_double,
        y: *mut libc::c_double,
        z: *mut libc::c_double,
        m: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_clone(s: *const GEOSCoordSequence) -> *mut GEOSCoordSequence;
}
extern "C" {
    pub fn GEOSCoordSeq_destroy(s: *mut GEOSCoordSequence);
}
extern "C" {
    pub fn GEOSCoordSeq_setX(
        s: *mut GEOSCoordSequence,
        idx: libc::c_uint,
        val: libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_setY(
        s: *mut GEOSCoordSequence,
        idx: libc::c_uint,
        val: libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_setZ(
        s: *mut GEOSCoordSequence,
        idx: libc::c_uint,
        val: libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_setXY(
        s: *mut GEOSCoordSequence,
        idx: libc::c_uint,
        x: libc::c_double,
        y: libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_setXYZ(
        s: *mut GEOSCoordSequence,
        idx: libc::c_uint,
        x: libc::c_double,
        y: libc::c_double,
        z: libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_setOrdinate(
        s: *mut GEOSCoordSequence,
        idx: libc::c_uint,
        dim: libc::c_uint,
        val: libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_getX(
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        val: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_getY(
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        val: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_getZ(
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        val: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_getXY(
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        x: *mut libc::c_double,
        y: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_getXYZ(
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        x: *mut libc::c_double,
        y: *mut libc::c_double,
        z: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_getOrdinate(
        s: *const GEOSCoordSequence,
        idx: libc::c_uint,
        dim: libc::c_uint,
        val: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_getSize(
        s: *const GEOSCoordSequence,
        size: *mut libc::c_uint,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_getDimensions(
        s: *const GEOSCoordSequence,
        dims: *mut libc::c_uint,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoordSeq_isCCW(
        s: *const GEOSCoordSequence,
        is_ccw: *mut libc::c_char,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeom_createPoint(s: *mut GEOSCoordSequence) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createPointFromXY(x: libc::c_double, y: libc::c_double) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createEmptyPoint() -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createLinearRing(s: *mut GEOSCoordSequence) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createLineString(s: *mut GEOSCoordSequence) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createEmptyLineString() -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createEmptyPolygon() -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createPolygon(
        shell: *mut GEOSGeometry,
        holes: *mut *mut GEOSGeometry,
        nholes: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createCircularString(s: *mut GEOSCoordSequence) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createEmptyCircularString() -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createCompoundCurve(
        curves: *mut *mut GEOSGeometry,
        ncurves: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createEmptyCompoundCurve() -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createCurvePolygon(
        shell: *mut GEOSGeometry,
        holes: *mut *mut GEOSGeometry,
        nholes: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createEmptyCurvePolygon() -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createCollection(
        type_: libc::c_int,
        geoms: *mut *mut GEOSGeometry,
        ngeoms: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_releaseCollection(
        collection: *mut GEOSGeometry,
        ngeoms: *mut libc::c_uint,
    ) -> *mut *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createEmptyCollection(type_: libc::c_int) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createRectangle(
        xmin: libc::c_double,
        ymin: libc::c_double,
        xmax: libc::c_double,
        ymax: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_clone(g: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_destroy(g: *mut GEOSGeometry);
}
extern "C" {
    pub fn GEOSGeomType(g: *const GEOSGeometry) -> *mut libc::c_char;
}
extern "C" {
    pub fn GEOSGeomTypeId(g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGetSRID(g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeom_getUserData(g: *const GEOSGeometry) -> *mut libc::c_void;
}
extern "C" {
    pub fn GEOSGetNumGeometries(g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGetGeometryN(g: *const GEOSGeometry, n: libc::c_int) -> *const GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_getPrecision(g: *const GEOSGeometry) -> libc::c_double;
}
extern "C" {
    pub fn GEOSGetNumInteriorRings(g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeomGetNumPoints(g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeomGetX(g: *const GEOSGeometry, x: *mut libc::c_double) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeomGetY(g: *const GEOSGeometry, y: *mut libc::c_double) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeomGetZ(g: *const GEOSGeometry, z: *mut libc::c_double) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGeomGetM(g: *const GEOSGeometry, m: *mut libc::c_double) -> libc::c_int;
}
extern "C" {
    pub fn GEOSGetInteriorRingN(g: *const GEOSGeometry, n: libc::c_int) -> *const GEOSGeometry;
}
extern "C" {
    pub fn GEOSGetExteriorRing(g: *const GEOSGeometry) -> *const GEOSGeometry;
}
extern "C" {
    pub fn GEOSGetNumCoordinates(g: *const GEOSGeometry) -> libc::c_int;
}
